# GogoBot

./: .gitignore  README.md  db.txt  keep_alive.py  main.py  pyproject.toml
cogs/: AddAnime.py  ListAnime.py  OnReady.py  RemoveAnime.py  SetAnime.py  Setup.py  UnsetAnime.py
