[tool.poetry]
name = "repl_python3_GogoBot"
version = "0.1.0"
description = ""
authors = ["lgf2111 <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0.3"
python-dotenv = "^0.19.2"
requests-html = "^0.10.0"
discord = "^1.7.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
